samples/_failures_safe/1761002181_6fbb91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_237f9494.c: In function ‘main’:
./samples/SAFE/__tmp_237f9494.c:181:70: error: expected ‘;’ at end of input
  181 |         else if (strcmp(input, "failure") == 0) event = EVENT_FAILURE
      |                                                                      ^
      |                                                                      ;
./samples/SAFE/__tmp_237f9494.c:181:9: error: expected declaration or statement at end of input
  181 |         else if (strcmp(input, "failure") == 0) event = EVENT_FAILURE
      |         ^~~~
./samples/SAFE/__tmp_237f9494.c:181:9: error: expected declaration or statement at end of input
